Initial style guide

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram | Perfil de viagens</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maxime libero odio corporis facilis quaerat
+        magnam veritatis, assumenda, laborum natus non repellat debitis quo aperiam hic odit rem quia quis!
+    </p>
 </body>
+
 </html>
